[package]
authors = ["Lukas Stabe <ahti333@gmail.com>", "Hans Ole Hatzel <hhatzel@gmail.com>"]
name = "vorleser-rust"
version = "0.1.0"
edition = "2018"
[[bin]]
name = "vorleser_server_bin"
path = "src/bin/main.rs"

[dependencies]
argon2rs = "0.2"
base64 = "0.9.0"
clap = "*"
simplelog = "0.5.1"
error-chain = "0.11.0"
humanesort = "0.1.0-alpha"
id3 = "0.2.4"
image = "0.18.0"
lazy_static = "1"
libc = "0.2"
log = "*"
mp3-metadata = { git = "https://github.com/GuillaumeGomez/mp3-metadata.git" }
regex = "0.2.1"
ring = "~0.13"
serde = "1"
serde_derive = "1"
serde_json = "1"
toml = "0.4.5"
validator = "0.8"
validator_derive = "0.8"
walkdir = "2"
rocket = {git = "https://github.com/SergioBenitez/Rocket.git"}
rocket_codegen = {git = "https://github.com/SergioBenitez/Rocket.git"}
fs2 = "0.4.3"
scheduled-thread-pool = "0.2.0"
failure = "0.1.1"
sentry = "0.12"

[dependencies.rocket_contrib]
default-features = false
features = ["json", "uuid"]
# version = "= 0.3.6"
git = "https://github.com/SergioBenitez/Rocket.git"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.diesel]
features = ["sqlite", "uuid", "chrono", "serde_json", "r2d2", "unstable"]
# version = "~1.3"
git = "https://github.com/diesel-rs/diesel.git"

[dependencies.diesel_migrations]
features = ["sqlite"]
# version = "~1.3"
git = "https://github.com/diesel-rs/diesel.git"

[dependencies.ffmpeg-sys]
default-features = false
features = ["avformat"]
git = "https://github.com/meh/rust-ffmpeg-sys"
version = "4.0"

[dependencies.uuid]
features = ["serde", "v4"]
version = "~0.7"

[dev-dependencies]
# speculate = "0.0.26"
speculate = {git = "https://github.com/utkarshkukreti/speculate.rs.git"}

[features]
webfrontend = []

[lib]
name = "vorleser_server"
path = "src/lib.rs"

[profile.release]
debug = true

[patch.crates-io]
diesel = { git = "https://github.com/diesel-rs/diesel.git" }
diesel_derives = { git = "https://github.com/trha/diesel", branch = "fix-diesel-derives" }
diesel_migrations = { git = "https://github.com/diesel-rs/diesel.git" }
migrations_internals = { git = "https://github.com/diesel-rs/diesel.git" }
migrations_macros = { git = "https://github.com/diesel-rs/diesel.git" }
